add test db and fixed some places

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="container">
         <h1> List affairs </h1>
-        <form method="POST">
+        <form method="POST" action="/welcome/view">
             <input class="form-control" type="text" name="note" id ="note" placeholder="Enter note text ">
             <input class="form-control" type="number" name="id" id ="id" placeholder="Enter id note ">
          
