add middleware and add one logic code

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -8,12 +8,12 @@
 <body>
   <div>
     <img src="https://html5css.ru/howto/img_avatar2.png" alt="Avatar" class="avatar">
-    <form method="POST" action="/login/view">
+    <form method="POST" action="/page/login">
       <label><b>Name</b></label><input name="username" placeholder="Enter your username" type="text" value=""
-        required />
+        required="required" />
       <label><b>Password</b></label><input name="password" placeholder="Enter your password" type="password" value=""
-        required />
-      <label><b>Address</b></label><input name="address" placeholder="Enter Your email" type="text" value="" required />
+        required="required" />
+      <label><b>Address</b></label><input name="address" placeholder="Enter Your email" type="text" value="" required="required" />
       <input class="button1" type="submit" value="submit" />
     </form>
 
