--- a/templates/recovery.html
+++ b/templates/recovery.html
@@ -8,7 +8,7 @@
 <body>
   <div>
     <h1>Forgot your password ?</h1>
-    <form method="POST" action="/recovery/password">
+    <form method="POST" action="/page/reset/password">
       <label><b>Enter your password</b></label><input name="password" placeholder="Enter new Password" type="password" value=""
         required />
       <label><b>Enter your linked email</b></label><input name="address" placeholder="Enter email" type="text" value=""
