add delete handler method

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
             <input class="form-control" type="number" name="id" id ="id" placeholder="Enter id note ">
     
             <button class="btn-danger" type="submit" name="send"><b>Save</b></button>
-            <button class="btn-danger" type="submit" name="send"><b>Delete</b></button>
+            <a href = /page/delete/note><b>Delete Note</b></a>
             <a href="/page/show/notes"><b>Show Notes</b></a>
         </form>
     </div>
